--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@reduxjs/toolkit": "^2.5.1",
+    "arkham-divider-data": "^1.1.14",
     "arkham-investigator-data": "^1.0.0",
     "expo": "~52.0.23",
     "expo-blur": "~14.0.1",
@@ -33,6 +34,7 @@
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.6",
     "expo-web-browser": "~14.0.1",
+    "ramda": "^0.30.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
@@ -49,6 +51,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.12",
+    "@types/ramda": "^0.30.2",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
     "@types/styled-components-react-native": "^5.2.5",
