--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-native-storage": "^1.0.1",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
+    "react-redux": "^9.2.0",
     "redux-toolkit-helpers": "^1.0.3",
     "styled-components": "^6.1.15"
   },
