--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "react-native-webview": "13.12.5",
     "react-redux": "^9.2.0",
     "redux-toolkit-helpers": "^1.0.3",
-    "styled-components": "^6.1.15"
+    "styled-components": "^6.1.15",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
