--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.6",
     "expo-web-browser": "~14.0.1",
+    "html-react-parser": "^5.2.2",
     "ramda": "^0.30.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
