base footer layout

--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "name": "my-app",
     "slug": "my-app",
     "version": "1.0.0",
-    "orientation": "portrait",
+    "orientation": "default",
     "icon": "./assets/images/icon.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
@@ -24,7 +24,6 @@
     },
     "plugins": [
       "expo-router",
-      "expo-audio",
       [
         "expo-splash-screen",
         {
