--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@charmy.tech/react-native-stroke-text": "^1.2.2",
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^2.1.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
@@ -70,6 +71,7 @@
     "@types/styled-components-react-native": "^5.2.5",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.2",
+    "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
