--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "expo-system-ui": "~4.0.6",
     "expo-web-browser": "~14.0.1",
     "html-react-parser": "^5.2.2",
+    "mathjs": "^14.3.0",
     "ramda": "^0.30.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
