--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@quidone/react-native-wheel-picker": "^1.4.0",
+    "@quidone/react-native-wheel-picker-feedback": "^1.0.0",
     "@react-native-async-storage/async-storage": "^2.1.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
