--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint",
@@ -19,10 +19,10 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@axenuab/react-native-haptic-wheel-picker": "^1.0.1",
     "@expo/vector-icons": "^14.0.2",
     "@quidone/react-native-wheel-picker": "^1.4.0",
-    "@quidone/react-native-wheel-picker-feedback": "^1.0.0",
-    "@react-native-async-storage/async-storage": "^2.1.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@reduxjs/toolkit": "^2.5.1",
@@ -46,14 +46,16 @@
     "ramda": "^0.30.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.5",
+    "react-native": "0.76.7",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-haptic-feedback": "^2.3.3",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-storage": "^1.0.1",
     "react-native-svg": "15.8.0",
+    "react-native-turbo-haptics": "^1.0.4",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "react-redux": "^9.2.0",
@@ -73,6 +75,7 @@
     "@types/styled-components-react-native": "^5.2.5",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.2",
+    "nitro-codegen": "^0.25.0",
     "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
