--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-native-turbo-haptics": "^1.0.4",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
+    "react-native-wheely": "^0.6.0",
     "react-redux": "^9.2.0",
     "react-responsive": "^10.0.0",
     "redux-toolkit-helpers": "^1.0.3",
