--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-responsive": "^10.0.0",
     "redux-toolkit-helpers": "^1.0.3",
     "styled-components": "^6.1.15",
+    "throttle-debounce": "^5.0.2",
     "uuid": "^11.0.5"
   },
   "devDependencies": {
@@ -74,6 +75,7 @@
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
     "@types/styled-components-react-native": "^5.2.5",
+    "@types/throttle-debounce": "^5.0.2",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.2",
     "nitro-codegen": "^0.25.0",
