--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-app",
   "main": "expo-router/entry",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
@@ -42,10 +42,12 @@
     "expo-system-ui": "~4.0.6",
     "expo-web-browser": "~14.0.1",
     "html-react-parser": "^5.2.2",
+    "i18next": "^24.2.2",
     "mathjs": "^14.3.0",
     "ramda": "^0.30.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-i18next": "^15.4.1",
     "react-native": "0.76.7",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
