--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-haptic-feedback": "^2.3.3",
+    "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
@@ -63,6 +64,8 @@
     "react-native-wheely": "^0.6.0",
     "react-redux": "^9.2.0",
     "react-responsive": "^10.0.0",
+    "redux-devtools-expo-dev-plugin": "^1.0.0",
+    "redux-persist": "^6.0.0",
     "redux-toolkit-helpers": "^1.0.3",
     "styled-components": "^6.1.15",
     "throttle-debounce": "^5.0.2",
