updated About Page

--- a/app.json
+++ b/app.json
@@ -38,6 +38,14 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "5adfba1a-a202-4ecb-8450-1079290f35b8"
+      }
     }
   }
 }
