--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 EXPO_PUBLIC_DONATE_LINK="https://boosty.to/arkham.divider/donate"
+EXPO_PUBLIC_INVESTIGATORS_API_URL="https://neizerth.github.io/ArkhamInvestigatorData"
+EXPO_PUBLIC_API_URL="https://neizerth.github.io/ArkhamDividerData"
