--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,7 @@
 EXPO_PUBLIC_API_URL="https://neizerth.github.io/ArkhamInvestigatorData/"
+EXPO_PUBLIC_INVESTIGATORS_API_URL="https://neizerth.github.io/ArkhamInvestigatorData"
+
+# EXPO_PUBLIC_INVESTIGATORS_API_URL="http://localhost:8080"
+EXPO_PUBLIC_API_URL="https://neizerth.github.io/ArkhamDividerData"
+
+# EXPO_PUBLIC_API_URL="http://localhost:8080"
