--- a/package.json
+++ b/package.json
@@ -71,7 +71,8 @@
     "redux-toolkit-helpers": "^1.0.3",
     "styled-components": "^6.1.15",
     "throttle-debounce": "^5.0.2",
-    "uuid": "^11.0.5"
+    "uuid": "^11.0.5",
+    "expo-application": "~6.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
