--- a/eas.json
+++ b/eas.json
@@ -14,7 +14,7 @@
     "production": {
       "autoIncrement": true
     },
-    "rustore": {
+    "apk": {
       "android": {
         "buildType": "apk"
       }
