fixed script command

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
 
     "eas:android": "eas build -p android",
     "eas:apk": "npm run eas:android -- --profile apk",
-    "build:apk": "npm run build:apk -- --local"
+    "build:apk": "npm run eas:apk -- --local"
   },
   "jest": {
     "preset": "jest-expo"
