fixed fonts loading

--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "Arkham Investigator",
     "slug": "arkham-investigator",
-    "version": "1.0.2",
+    "version": "1.0.4",
     "orientation": "portrait",
     "icon": "./assets/images/logo-dark.png",
     "scheme": "arkham-investigator",
@@ -17,7 +17,8 @@
         "foregroundImage": "./assets/images/icon.png",
         "backgroundColor": "#000"
       },
-      "package": "com.arkhaminvestigator"
+      "package": "com.arkhaminvestigator",
+      "versionCode": 26
     },
     "web": {
       "bundler": "metro",
