--- a/package.json
+++ b/package.json
@@ -5,24 +5,18 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    
     "test": "jest --watchAll",
     "lint": "expo lint",
     "knip": "npx knip",
-
     "ts:check": "tsc",
-
-    "biome:check": "biome check ./slices",
-    "biome:format": "biome check --write ./slices",
-    "biome:fix": "biome lint --write ./slices",
-    
+    "biome:lint": "npx @biomejs/biome check ./slices",
+    "biome:format": "npx @biomejs/biome check --write ./slices",
+    "biome:fix": "npx @biomejs/biome lint --write ./slices",
     "prebuild": "expo prebuild",
     "prebuild:android": "npm run prebuild -- -p android",
-
     "eas:android": "npm run prebuild:android && eas build -p android",
     "eas:apk": "npm run eas:android -- --profile apk",
     "build:apk": "npm run eas:apk -- --local",
@@ -89,7 +83,6 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@biomejs/biome": "^1.9.4",
     "@types/color": "^4.2.0",
     "@types/jest": "^29.5.12",
     "@types/ramda": "^0.30.2",
@@ -99,6 +92,7 @@
     "@types/throttle-debounce": "^5.0.2",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.2",
+    "lefthook": "^1.11.3",
     "nitro-codegen": "^0.25.0",
     "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.3.1",
