--- a/package.json
+++ b/package.json
@@ -36,14 +36,14 @@
     "@reduxjs/toolkit": "^2.5.1",
     "arkham-divider-data": "^1.1.14",
     "arkham-investigator-data": "^1.0.13",
-    "expo": "~52.0.23",
+    "expo": "~52.0.38",
     "expo-application": "~6.0.2",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.2",
     "expo-haptics": "~14.0.0",
     "expo-linking": "~7.0.3",
-    "expo-router": "~4.0.15",
+    "expo-router": "~4.0.19",
     "expo-screen-orientation": "~8.0.4",
     "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
@@ -83,6 +83,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@commitlint/config-conventional": "^19.8.0",
     "@types/color": "^4.2.0",
     "@types/jest": "^29.5.12",
     "@types/ramda": "^0.30.2",
@@ -91,12 +92,17 @@
     "@types/styled-components-react-native": "^5.2.5",
     "@types/throttle-debounce": "^5.0.2",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.2",
+    "jest-expo": "~52.0.6",
     "lefthook": "^1.11.3",
     "nitro-codegen": "^0.25.0",
     "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
-  "private": true
+  "private": true,
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  }
 }
