feat: added checks to pre commit

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -1,14 +1,14 @@
-# pre-commit:
-#   parallel: true
-#   commands:
-#     lint:
-#       files: git diff --name-only @{push}
-#       glob: "*.{js,ts,jsx,tsx}"
-#       run: npm run biome:lint
-#     types:
-#       files: git diff --name-only @{push}
-#       glob: "*.{js,ts, jsx, tsx}"
-#       run: npm run ts:check
+pre-commit:
+  parallel: true
+  commands:
+    lint:
+      files: git diff --name-only @{push}
+      glob: "*.{js,ts,jsx,tsx}"
+      run: npm run biome:lint
+    types:
+      files: git diff --name-only @{push}
+      glob: "*.{js,ts, jsx, tsx}"
+      run: npm run ts:check
 commit-msg:
   parallel: true
   commands:
