--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "redux-persist": "^6.0.0",
     "redux-toolkit-helpers": "^1.0.3",
     "styled-components": "^6.1.15",
+    "throttle-debounce": "^5.0.2",
     "uuid": "^11.0.5"
   },
   "devDependencies": {
