--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "expo-system-ui": "~4.0.6",
     "expo-web-browser": "~14.0.1",
     "html-react-parser": "^5.2.2",
+    "hyphen": "^1.10.6",
     "i18next": "^24.2.2",
     "mathjs": "^14.3.0",
     "ramda": "^0.30.1",
@@ -83,6 +84,7 @@
     "@babel/core": "^7.25.2",
     "@commitlint/config-conventional": "^19.8.0",
     "@types/color": "^4.2.0",
+    "@types/hyphen": "^1.6.7",
     "@types/jest": "^29.5.12",
     "@types/ramda": "^0.30.2",
     "@types/react": "~18.3.12",
