--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,13 @@
 {
-  "extends": "expo/tsconfig.base",
-  "compilerOptions": {
-    "strict": true,
-    "esModuleInterop": true,
-    "sourceMap": true,
-    "paths": {
-      "@app/*": ["./slices/app/*"],
-      "@shared/*": ["./slices/shared/*"],
-      "@entities/*": ["./slices/entities/*"],
-      "@pages/*": ["./slices/pages/*"],
-      "@widgets/*": ["./slices/widgets/*"],
-      "@features/*": ["./slices/features/*"]
-    }
-  },
-  "include": [
-    "**/*.ts",
-    "**/*.tsx",
-    ".expo/types/**/*.ts",
-    "expo-env.d.ts",
-    "declarations.d.ts"
-  ]
+	"extends": "./tsconfig.base.json",
+	"compilerOptions": {
+		"paths": {
+			"@app/*": ["./slices/app/*"],
+			"@shared/*": ["./slices/shared/*"],
+			"@entities/*": ["./slices/entities/*"],
+			"@pages/*": ["./slices/pages/*"],
+			"@widgets/*": ["./slices/widgets/*"],
+			"@features/*": ["./slices/features/*"]
+		}
+	}
 }
