--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@reduxjs/toolkit": "^2.5.1",
     "@uidotdev/usehooks": "^2.4.1",
     "arkham-divider-data": "^1.1.14",
-    "arkham-investigator-data": "^1.0.13",
+    "arkham-investigator-data": "^1.3.0",
     "expo": "~52.0.38",
     "expo-application": "~6.0.2",
     "expo-blur": "~14.0.1",
@@ -76,6 +76,7 @@
     "redux-devtools-expo-dev-plugin": "^1.0.0",
     "redux-persist": "^6.0.0",
     "redux-toolkit-helpers": "^1.0.3",
+    "semver": "^7.7.1",
     "styled-components": "^6.1.15",
     "throttle-debounce": "^5.0.2",
     "uuid": "^11.0.5"
@@ -89,6 +90,7 @@
     "@types/ramda": "^0.30.2",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
+    "@types/semver": "^7.7.0",
     "@types/styled-components-react-native": "^5.2.5",
     "@types/throttle-debounce": "^5.0.2",
     "jest": "^29.2.1",
