--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
     "ios": "expo run:ios",
+    "ios:device": "expo run:ios --device",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint",
@@ -28,7 +29,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/slider": "^4.5.6",
+    "@react-native-community/slider": "4.5.5",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@reduxjs/toolkit": "^2.5.1",
@@ -41,12 +42,12 @@
     "expo-font": "~13.0.2",
     "expo-haptics": "~14.0.0",
     "expo-linking": "~7.0.3",
-    "expo-router": "~4.0.19",
+    "expo-router": "~4.0.20",
     "expo-screen-orientation": "~8.0.4",
-    "expo-splash-screen": "~0.29.18",
+    "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
-    "expo-system-ui": "~4.0.6",
+    "expo-system-ui": "~4.0.9",
     "expo-web-browser": "~14.0.1",
     "html-react-parser": "^5.2.2",
     "i18next": "^24.2.2",
@@ -55,7 +56,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-i18next": "^15.4.1",
-    "react-native": "0.76.7",
+    "react-native": "0.76.9",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
@@ -80,6 +81,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
     "@types/color": "^4.2.0",
     "@types/jest": "^29.5.12",
