--- a/package.json
+++ b/package.json
@@ -57,7 +57,9 @@
     "react-dom": "18.3.1",
     "react-i18next": "^15.4.1",
     "react-native": "0.76.9",
+    "react-native-color-matrix-image-filters": "^7.0.2",
     "react-native-element-dropdown": "^2.12.4",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-haptic-feedback": "^2.3.3",
