feat: base asset management

--- a/slices/widgets/tsconfig.json
+++ b/slices/widgets/tsconfig.json
@@ -2,6 +2,7 @@
 	"extends": "../../tsconfig.base.json",
 	"compilerOptions": {
 		"paths": {
+			"@assets/*": ["../../assets/*"],
 			"@shared/*": ["../shared/*"],
 			"@entities/*": ["../entities/*"],
 			"@features/*": ["../features/*"]
