--- a/slices/shared/tsconfig.json
+++ b/slices/shared/tsconfig.json
@@ -2,6 +2,7 @@
 	"extends": "../../tsconfig.base.json",
 	"compilerOptions": {
 		"paths": {
+			"@assets/*": ["../../assets/*"],
 			"@shared/model": ["./model"]
 		}
 	}
