--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -3,7 +3,10 @@
 	"compilerOptions": {
 		"strict": true,
 		"esModuleInterop": true,
-		"sourceMap": true
+		"sourceMap": true,
+		"paths": {
+			"@assets/*": ["./assets/*"]
+		}
 	},
 	"include": [
 		"**/*.ts",
