--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,31 +1,15 @@
 {
-  "extends": "./tsconfig.base.json",
-  "compilerOptions": {
-    "paths": {
-      "@app/*": [
-        "./slices/app/*"
-      ],
-      "@shared/*": [
-        "./slices/shared/*"
-      ],
-      "@entities/*": [
-        "./slices/entities/*"
-      ],
-      "@pages/*": [
-        "./slices/pages/*"
-      ],
-      "@widgets/*": [
-        "./slices/widgets/*"
-      ],
-      "@features/*": [
-        "./slices/features/*"
-      ]
-    }
-  },
-  "include": [
-    "**/*.ts",
-    "**/*.tsx",
-    ".expo/types/**/*.ts",
-    "expo-env.d.ts"
-  ]
+	"extends": "./tsconfig.base.json",
+	"compilerOptions": {
+		"paths": {
+			"@app/*": ["./slices/app/*"],
+			"@shared/*": ["./slices/shared/*"],
+			"@entities/*": ["./slices/entities/*"],
+			"@pages/*": ["./slices/pages/*"],
+			"@widgets/*": ["./slices/widgets/*"],
+			"@features/*": ["./slices/features/*"],
+			"@assets/*": ["./assets/*"]
+		}
+	},
+	"include": ["**/*.ts", "**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts"]
 }
