feat: ios asset preloading

--- a/app.json
+++ b/app.json
@@ -1,53 +1,53 @@
 {
-  "expo": {
-    "name": "Arkham Investigator",
-    "slug": "arkham-investigator",
-    "version": "1.5.6",
-    "orientation": "portrait",
-    "icon": "./assets/images/logo-dark.png",
-    "scheme": "arkham-investigator",
-    "userInterfaceStyle": "dark",
-    "newArchEnabled": true,
-    "ios": {
-      "supportsTablet": true,
-      "bundleIdentifier": "com.arkhaminvestigator"
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/images/icon.png",
-        "backgroundColor": "#000"
-      },
-      "package": "com.arkhaminvestigator",
-      "versionCode": 217
-    },
-    "web": {
-      "bundler": "metro",
-      "output": "static",
-      "favicon": "./assets/images/favicon.png"
-    },
-    "plugins": [
-      "expo-router",
-      [
-        "expo-splash-screen",
-        {
-          "image": "./assets/images/logo-dark.png",
-          "imageWidth": 200,
-          "resizeMode": "contain",
-          "backgroundColor": "#000"
-        }
-      ],
-      "expo-asset"
-    ],
-    "experiments": {
-      "typedRoutes": true
-    },
-    "extra": {
-      "router": {
-        "origin": false
-      },
-      "eas": {
-        "projectId": "5adfba1a-a202-4ecb-8450-1079290f35b8"
-      }
-    }
-  }
+	"expo": {
+		"name": "Arkham Investigator",
+		"slug": "arkham-investigator",
+		"version": "1.5.6",
+		"orientation": "portrait",
+		"icon": "./assets/images/icon.png",
+		"scheme": "arkham-investigator",
+		"userInterfaceStyle": "dark",
+		"newArchEnabled": true,
+		"ios": {
+			"supportsTablet": true,
+			"bundleIdentifier": "com.arkhaminvestigator"
+		},
+		"android": {
+			"adaptiveIcon": {
+				"foregroundImage": "./assets/images/icon.png",
+				"backgroundColor": "#000"
+			},
+			"package": "com.arkhaminvestigator",
+			"versionCode": 217
+		},
+		"web": {
+			"bundler": "metro",
+			"output": "static",
+			"favicon": "./assets/images/favicon.png"
+		},
+		"plugins": [
+			"expo-router",
+			[
+				"expo-splash-screen",
+				{
+					"image": "./assets/images/logo-dark.png",
+					"imageWidth": 200,
+					"resizeMode": "contain",
+					"backgroundColor": "#000"
+				}
+			],
+			"expo-asset"
+		],
+		"experiments": {
+			"typedRoutes": true
+		},
+		"extra": {
+			"router": {
+				"origin": false
+			},
+			"eas": {
+				"projectId": "5adfba1a-a202-4ecb-8450-1079290f35b8"
+			}
+		}
+	}
 }
