fix: fast image removed due to memory leaks

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "arkham-investigator-data": "^2.0.6",
     "expo": "~52.0.38",
     "expo-application": "~6.0.2",
+    "expo-asset": "~11.0.5",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.2",
@@ -59,7 +60,6 @@
     "react-native": "0.76.9",
     "react-native-color-matrix-image-filters": "^7.0.2",
     "react-native-element-dropdown": "^2.12.4",
-    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-haptic-feedback": "^2.3.3",
@@ -79,8 +79,7 @@
     "redux-toolkit-helpers": "^1.0.3",
     "semver": "^7.7.1",
     "styled-components": "^6.1.15",
-    "uuid": "^11.0.5",
-    "expo-asset": "~11.0.5"
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
