--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.2",
     "expo-haptics": "~14.0.0",
+    "expo-image": "~2.0.7",
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.20",
     "expo-screen-orientation": "~8.0.4",
@@ -77,10 +78,10 @@
     "redux-devtools-expo-dev-plugin": "^1.0.0",
     "redux-persist": "^6.0.0",
     "redux-toolkit-helpers": "^1.0.3",
+    "rn-statusbar-height": "^2.1.1",
     "semver": "^7.7.1",
     "styled-components": "^6.1.15",
-    "uuid": "^11.0.5",
-    "expo-image": "~2.0.7"
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
