feat: switching to app.js config

--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "arkham-investigator",
   "main": "expo-router/entry",
-  "version": "1.9.0",
+  "version": "1.9.1",
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "ios:device": "expo run:ios --device",
-    "web": "expo start --web",
+    "android": "npx cross-env MODE=development expo run:android",
+    "ios": "npx cross-env MODE=development expo run:ios",
+    "ios:device": "npm run:ios -- --device",
+    "web": "npx cross-env MODE=development expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint",
     "knip": "npx knip",
