--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
     "@types/color": "^4.2.0",
+    "@types/fast-shuffle": "^4.5.3",
     "@types/jest": "^29.5.12",
     "@types/ramda": "^0.30.2",
     "@types/react": "~18.3.12",
