--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "reset-project": "node ./scripts/reset-project.js",
     "android": "npx cross-env MODE=development expo run:android",
     "ios": "npx cross-env MODE=development expo run:ios",
-    "ios:device": "npm run:ios -- --device",
+    "ios:device": "npm run ios -- --device",
     "web": "npx cross-env MODE=development expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint",
