fix: ios compatibility

--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
 	"scripts": {
 		"start": "expo start",
 		"reset-project": "node ./scripts/reset-project.js",
-		"android": "npx cross-env MODE=development expo run:android",
-		"ios": "npx cross-env MODE=development expo run:ios",
-		"ios:device": "npx cross-env MODE=development expo run:ios --device",
-		"web": "npx cross-env MODE=development expo start --web",
+		"android": "expo run:android",
+		"ios": "expo run:ios",
+		"ios:device": "expo run:ios --device",
+		"web": "expo start --web",
 		"test": "jest --watchAll",
 		"lint": "expo lint",
 		"knip": "npx knip",
