--- a/package.json
+++ b/package.json
@@ -1,113 +1,115 @@
 {
-	"name": "arkham-investigator",
-	"main": "expo-router/entry",
-	"version": "1.10.7",
-	"scripts": {
-		"start": "expo start",
-		"reset-project": "node ./scripts/reset-project.js",
-		"android": "expo run:android",
-		"ios": "expo run:ios",
-		"ios:device": "expo run:ios --device",
-		"web": "expo start --web",
-		"test": "jest --watchAll",
-		"lint": "expo lint",
-		"knip": "npx knip",
-		"ts:check": "tsc",
-		"biome:lint": "npx @biomejs/biome check ./slices",
-		"biome:format": "npx @biomejs/biome check --write ./slices",
-		"biome:fix": "npx @biomejs/biome lint --write ./slices",
-		"prebuild": "expo prebuild",
-		"prebuild:android": "npm run prebuild -- -p android",
-		"prebuild:ios": "npm run prebuild -- -p ios",
-		"eas:android": "npm run prebuild:android && eas build -p android",
-		"eas:apk": "npm run eas:android -- --profile apk",
-		"build:apk": "npm run eas:apk -- --local",
-		"build:android": "npm run eas:android -- --local"
-	},
-	"jest": {
-		"preset": "jest-expo"
-	},
-	"dependencies": {
-		"@expo/vector-icons": "^14.0.2",
-		"@react-native-async-storage/async-storage": "1.23.1",
-		"@react-native-community/slider": "4.5.5",
-		"@react-navigation/bottom-tabs": "^7.2.0",
-		"@react-navigation/native": "^7.0.14",
-		"@reduxjs/toolkit": "^2.5.1",
-		"arkham-divider-data": "^1.1.14",
-		"arkham-investigator-data": "^2.0.6",
-		"expo": "~52.0.38",
-		"expo-application": "~6.0.2",
-		"expo-asset": "~11.0.5",
-		"expo-blur": "~14.0.1",
-		"expo-constants": "~17.0.3",
-		"expo-font": "~13.0.2",
-		"expo-haptics": "~14.0.0",
-		"expo-image": "~2.0.7",
-		"expo-linking": "~7.0.3",
-		"expo-router": "~4.0.20",
-		"expo-screen-orientation": "~8.0.4",
-		"expo-splash-screen": "~0.29.24",
-		"expo-status-bar": "~2.0.0",
-		"expo-symbols": "~0.2.0",
-		"expo-system-ui": "~4.0.9",
-		"expo-web-browser": "~14.0.1",
-		"fast-shuffle": "^6.1.1",
-		"html-react-parser": "^5.2.2",
-		"i18next": "^24.2.2",
-		"mathjs": "^14.3.0",
-		"ramda": "^0.30.1",
-		"react": "18.3.1",
-		"react-dom": "18.3.1",
-		"react-i18next": "^15.4.1",
-		"react-native": "0.76.9",
-		"react-native-color-matrix-image-filters": "^7.0.2",
-		"react-native-element-dropdown": "^2.12.4",
-		"react-native-gesture-handler": "~2.20.2",
-		"react-native-get-random-values": "^1.11.0",
-		"react-native-gradients": "^2.1.1",
-		"react-native-haptic-feedback": "^2.3.3",
-		"react-native-localize": "^3.4.1",
-		"react-native-picker-select": "^9.3.1",
-		"react-native-reanimated": "~3.16.1",
-		"react-native-safe-area-context": "4.12.0",
-		"react-native-screens": "~4.4.0",
-		"react-native-storage": "^1.0.1",
-		"react-native-svg": "15.8.0",
-		"react-native-web": "~0.19.13",
-		"react-native-webview": "13.12.5",
-		"react-redux": "^9.2.0",
-		"react-responsive": "^10.0.0",
-		"redux-devtools-expo-dev-plugin": "^1.0.0",
-		"redux-persist": "^6.0.0",
-		"redux-toolkit-helpers": "^1.0.3",
-		"rn-statusbar-height": "^2.1.1",
-		"semver": "^7.7.1",
-		"styled-components": "^6.1.15",
-		"uuid": "^11.0.5"
-	},
-	"devDependencies": {
-		"@babel/core": "^7.25.2",
-		"@commitlint/cli": "^19.8.0",
-		"@commitlint/config-conventional": "^19.8.0",
-		"@types/color": "^4.2.0",
-		"@types/fast-shuffle": "^4.5.3",
-		"@types/jest": "^29.5.12",
-		"@types/ramda": "^0.30.2",
-		"@types/react": "~18.3.12",
-		"@types/react-test-renderer": "^18.3.0",
-		"@types/semver": "^7.7.0",
-		"@types/styled-components-react-native": "^5.2.5",
-		"jest": "^29.2.1",
-		"jest-expo": "~52.0.6",
-		"lefthook": "^1.11.3",
-		"nitro-codegen": "^0.25.0",
-		"react-native-svg-transformer": "^1.5.0",
-		"react-test-renderer": "18.3.1",
-		"typescript": "^5.3.3"
-	},
-	"private": true,
-	"commitlint": {
-		"extends": ["@commitlint/config-conventional"]
-	}
+  "name": "arkham-investigator",
+  "main": "expo-router/entry",
+  "version": "1.10.8",
+  "scripts": {
+    "start": "expo start",
+    "reset-project": "node ./scripts/reset-project.js",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "ios:device": "expo run:ios --device",
+    "web": "expo start --web",
+    "test": "jest --watchAll",
+    "lint": "expo lint",
+    "knip": "npx knip",
+    "ts:check": "tsc",
+    "biome:lint": "npx @biomejs/biome check ./slices",
+    "biome:format": "npx @biomejs/biome check --write ./slices",
+    "biome:fix": "npx @biomejs/biome lint --write ./slices",
+    "prebuild": "expo prebuild",
+    "prebuild:android": "npm run prebuild -- -p android",
+    "prebuild:ios": "npm run prebuild -- -p ios",
+    "eas:android": "npm run prebuild:android && eas build -p android",
+    "eas:apk": "npm run eas:android -- --profile apk",
+    "build:apk": "npm run eas:apk -- --local",
+    "build:android": "npm run eas:android -- --local"
+  },
+  "jest": {
+    "preset": "jest-expo"
+  },
+  "dependencies": {
+    "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/slider": "4.5.5",
+    "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/native": "^7.0.14",
+    "@reduxjs/toolkit": "^2.5.1",
+    "arkham-divider-data": "^1.1.14",
+    "arkham-investigator-data": "^2.0.6",
+    "expo": "~52.0.38",
+    "expo-application": "~6.0.2",
+    "expo-asset": "~11.0.5",
+    "expo-blur": "~14.0.1",
+    "expo-constants": "~17.0.3",
+    "expo-font": "~13.0.2",
+    "expo-haptics": "~14.0.0",
+    "expo-image": "~2.0.7",
+    "expo-linking": "~7.0.3",
+    "expo-router": "~4.0.20",
+    "expo-screen-orientation": "~8.0.4",
+    "expo-splash-screen": "~0.29.24",
+    "expo-status-bar": "~2.0.0",
+    "expo-symbols": "~0.2.0",
+    "expo-system-ui": "~4.0.9",
+    "expo-web-browser": "~14.0.1",
+    "fast-shuffle": "^6.1.1",
+    "html-react-parser": "^5.2.2",
+    "i18next": "^24.2.2",
+    "mathjs": "^14.3.0",
+    "ramda": "^0.30.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-i18next": "^15.4.1",
+    "react-native": "0.76.9",
+    "react-native-color-matrix-image-filters": "^7.0.2",
+    "react-native-element-dropdown": "^2.12.4",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-gradients": "^2.1.1",
+    "react-native-haptic-feedback": "^2.3.3",
+    "react-native-localize": "^3.4.1",
+    "react-native-picker-select": "^9.3.1",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-storage": "^1.0.1",
+    "react-native-svg": "15.8.0",
+    "react-native-web": "~0.19.13",
+    "react-native-webview": "13.12.5",
+    "react-redux": "^9.2.0",
+    "react-responsive": "^10.0.0",
+    "redux-devtools-expo-dev-plugin": "^1.0.0",
+    "redux-persist": "^6.0.0",
+    "redux-toolkit-helpers": "^1.0.3",
+    "rn-statusbar-height": "^2.1.1",
+    "semver": "^7.7.1",
+    "styled-components": "^6.1.15",
+    "uuid": "^11.0.5"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.25.2",
+    "@commitlint/cli": "^19.8.0",
+    "@commitlint/config-conventional": "^19.8.0",
+    "@types/color": "^4.2.0",
+    "@types/fast-shuffle": "^4.5.3",
+    "@types/jest": "^29.5.12",
+    "@types/ramda": "^0.30.2",
+    "@types/react": "~18.3.12",
+    "@types/react-test-renderer": "^18.3.0",
+    "@types/semver": "^7.7.0",
+    "@types/styled-components-react-native": "^5.2.5",
+    "jest": "^29.2.1",
+    "jest-expo": "~52.0.6",
+    "lefthook": "^1.11.3",
+    "nitro-codegen": "^0.25.0",
+    "react-native-svg-transformer": "^1.5.0",
+    "react-test-renderer": "18.3.1",
+    "typescript": "^5.3.3"
+  },
+  "private": true,
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  }
 }
