--- a/package.json
+++ b/package.json
@@ -85,7 +85,8 @@
     "semver": "^7.7.1",
     "styled-components": "^6.1.15",
     "uuid": "^11.0.5",
-    "expo-keep-awake": "~14.0.3"
+    "expo-keep-awake": "~14.0.3",
+    "expo-audio": "~0.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
