refactor: package cleanup / changed command names

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -4,7 +4,7 @@ pre-commit:
     lint:
       files: git diff --name-only @{push}
       glob: "*.{js,ts,jsx,tsx}"
-      run: npm run biome:lint
+      run: npm run lint
     types:
       files: git diff --name-only @{push}
       glob: "*.{js,ts, jsx, tsx}"
