--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "ios:device": "expo run:ios --device",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint",
+    "expo:lint": "expo lint",
     "knip": "npx knip",
     "ts:check": "tsc",
-    "biome:lint": "npx @biomejs/biome check ./slices",
-    "biome:format": "npx @biomejs/biome check --write ./slices",
-    "biome:fix": "npx @biomejs/biome lint --write ./slices",
+    "lint": "npx @biomejs/biome check ./slices",
+    "format": "npx @biomejs/biome check --write ./slices",
+    "lint:fix": "npx @biomejs/biome lint --write ./slices",
     "prebuild": "expo prebuild",
     "prebuild:android": "npm run prebuild -- -p android",
     "prebuild:ios": "npm run prebuild -- -p ios",
@@ -47,6 +47,7 @@
     "expo-image": "~2.0.7",
     "expo-keep-awake": "~14.0.3",
     "expo-linking": "~7.0.3",
+    "expo-notifications": "~0.29.14",
     "expo-router": "~4.0.20",
     "expo-screen-orientation": "~8.0.4",
     "expo-splash-screen": "~0.29.24",
@@ -63,7 +64,6 @@
     "react-dom": "18.3.1",
     "react-i18next": "^15.4.1",
     "react-native": "0.76.9",
-    "react-native-color-matrix-image-filters": "^7.0.2",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-error-boundary": "^2.0.0",
     "react-native-gesture-handler": "~2.20.2",
@@ -71,7 +71,6 @@
     "react-native-gradients": "^2.1.1",
     "react-native-haptic-feedback": "^2.3.3",
     "react-native-localize": "^3.4.1",
-    "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
@@ -87,8 +86,7 @@
     "rn-statusbar-height": "^2.1.1",
     "semver": "^7.7.1",
     "styled-components": "^6.1.15",
-    "uuid": "^11.0.5",
-    "expo-notifications": "~0.29.14"
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -105,7 +103,6 @@
     "jest": "^29.2.1",
     "jest-expo": "~52.0.6",
     "lefthook": "^1.11.3",
-    "nitro-codegen": "^0.25.0",
     "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
