--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,11 @@
 			"@assets/*": ["./assets/*"]
 		}
 	},
-	"include": ["**/*.ts", "**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts"]
+	"include": [
+		"**/*.ts",
+		"**/*.tsx",
+		".expo/types/**/*.ts",
+		"expo-env.d.ts",
+		"slices/widgets/control/reference-select/ui/ReferenceCardSelect/hooks/useRenderItem.tsx"
+	]
 }
