feat: base timing reference

--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@biomejs/biome": "1.9.4",
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
     "@types/color": "^4.2.0",
