--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,11 +11,5 @@
 			"@assets/*": ["./assets/*"]
 		}
 	},
-	"include": [
-		"**/*.ts",
-		"**/*.tsx",
-		".expo/types/**/*.ts",
-		"expo-env.d.ts",
-		"slices/widgets/control/reference-select/ui/ReferenceCardSelect/hooks/useRenderItem.tsx"
-	]
+	"include": ["**/*.ts", "**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts"]
 }
