--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-simple-toast": "^3.3.2",
     "react-native-storage": "^1.0.1",
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
