refactor: moving modal module to @modules/core

--- a/slices/modules/tsconfig.json
+++ b/slices/modules/tsconfig.json
@@ -5,8 +5,9 @@
 			"@assets/*": ["../../assets/*"],
 			"@shared/*": ["../shared/*"],
 			"@entities/*": ["../entities/*"],
+			"@features/*": ["../features/*"],
 			"@widgets/*": ["../widgets/*"],
-			"@modules/*": ["../widgets/*"]
+			"@modules/*": ["../modules/*"]
 		}
 	}
 }
