refactor: chaos bag entities module

--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "expo:lint": "expo lint",
     "knip": "npx knip",
     "circular": "npx madge --circular slices/",
+    "t": "npm run ts:check",
     "ts:check": "tsc",
     "lint": "npx @biomejs/biome check ./slices",
+    "f": "npm run format",
     "format": "npx @biomejs/biome check --write ./slices",
     "lint:fix": "npx @biomejs/biome lint --write ./slices",
     "prebuild": "expo prebuild",
