--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -55,5 +55,16 @@ EX_DEV_CLIENT_NETWORK_INSPECTOR=true
 # Use legacy packaging to compress native libraries in the resulting APK.
 expo.useLegacyPackaging=false
 
+# Enable 16KB page size support for Android
+android.enableR8.fullMode=true
+android.useAndroidX=true
+android.enableJetifier=true
+
+android.compileSdkVersion=35
+android.targetSdkVersion=35
+android.buildToolsVersion=35.0.0
+android.ndkVersion=27.0.12077973
+android.enableProguardInReleaseBuilds=false
+android.enableShrinkResourcesInReleaseBuilds=false
 # Whether the app is configured to use edge-to-edge via the app config or `react-native-edge-to-edge` plugin
 expo.edgeToEdgeEnabled=true
