feat: changed image url to gh pages

--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ EXPO_PUBLIC_INVESTIGATORS_API_URL="https://neizerth.github.io/ArkhamInvestigator
 EXPO_PUBLIC_API_URL="https://neizerth.github.io/ArkhamDividerData"
 EXPO_PUBLIC_GOOGLE_PLAY_URL="https://play.google.com/store/apps/details?id=com.arkhaminvestigator"
 EXPO_PUBLIC_APP_STORE_URL=""
-EXPO_PUBLIC_ASSET_URL="https://assets.arkham-divider.com/arkham-investigator/"
+EXPO_PUBLIC_ASSET_URL="https://neizerth.github.io/ArkhamInvestigatorData"
