feat: android submit

--- a/package.json
+++ b/package.json
@@ -32,10 +32,11 @@
 		"build:apk": "npm run eas:apk -- --local",
 		"build:android": "npm run eas:android -- --local",
 		"build:ios": "npm run prebuild:ios && eas build -p ios --local",
-		"postbuild:ios": "tsx ./cli/rename-build.ts .ipa",
-		"postbuild:android": "tsx ./cli/rename-build.ts .aab",
-		"postbuild:apk": "tsx ./cli/rename-build.ts .apk",
-		"submit:ios": "sh ./cli/submit-ios.sh",
+		"postbuild:ios": "tsx ./cli/rename-build.ts ipa",
+		"postbuild:android": "tsx ./cli/rename-build.ts aab",
+		"postbuild:apk": "tsx ./cli/rename-build.ts apk",
+		"submit:ios": "sh ./cli/submit.sh ios ipa",
+		"submit:android": "sh ./cli/submit.sh android aab",
 		"setup:font": "tsx ./cli/update-icon-font.ts",
 		"setup": "npm run setup:font",
 		"version:increment": "tsx ./cli/increment-version.ts",
