--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
 		"circular": "npx madge --circular slices/",
 		"t": "npm run ts:check",
 		"ts:check": "tsc",
-		"lint": "npx @biomejs/biome check ./slices",
 		"f": "npm run format",
-		"format": "npx @biomejs/biome check --write ./slices",
-		"lint:fix": "npx @biomejs/biome lint --write ./slices",
+		"lint": "npx @biomejs/biome check ./slices ./modules",
+		"format": "npx @biomejs/biome check --write ./slices ./modules",
+		"lint:fix": "npx @biomejs/biome lint --write ./slices ./modules",
 		"prebuild": "expo prebuild",
 		"prebuild:android:dev": "MODE=development npm run prebuild -- -p android",
 		"prebuild:android": "npm run prebuild -- -p android",
